# cookiecutter-ultimate-python

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
local_extensions/: __init__.py  dependency.py  license_classifier.py
{{cookiecutter.__slug}}/: Dockerfile.alpine  README.md  pyproject.toml  {% if cookiecutter.task_runner == 'make' -%} Makefile {%- endif %}
